Fix Home Page Image on Mobile

--- a/frontend/src/app/home/home.component.scss
+++ b/frontend/src/app/home/home.component.scss
@@ -80,8 +80,8 @@
     }
 
     #face-image {
-        width: 60%;
-        height: 60vw;
+        width: 40vw;
+        height: 40vw;
         border-radius: 15%;
         object-fit: cover;
     }
